[gd_scene load_steps=13 format=3 uid="uid://cvfai0g3h7yew"]

[ext_resource type="Script" path="res://scripts/reflex_game30.gd" id="1_51sjf"]
[ext_resource type="Texture2D" uid="uid://b1206jgdf7ihp" path="res://assets/NeuronautasReflex.png" id="1_v6e36"]
[ext_resource type="FontFile" uid="uid://db5j82d65e1uw" path="res://assets/fonts/ComingSoon-Regular.ttf" id="2_s7lq8"]
[ext_resource type="Texture2D" uid="uid://byrpuwgqsity2" path="res://assets/Personagem.png" id="3_5rd5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wjdds"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_omn00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ofqha"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lgbhp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjb28"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ghkii"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_url71"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60axh"]

[node name="reflex_game30" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_51sjf")

[node name="NeuronautasReflex" type="Sprite2D" parent="."]
position = Vector2(200, 300)
texture = ExtResource("1_v6e36")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
clip_contents = true
layout_mode = 0
offset_right = 14.0
offset_bottom = 37.0
scale = Vector2(28.8054, 16.2041)
color = Color(0.0470588, 0.0392157, 0.101961, 1)

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0.592157, 0.698039, 1)
theme_override_fonts/font = ExtResource("2_s7lq8")
vertical_alignment = 1
clip_text = true

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 40.0
offset_right = 312.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0.592157, 0.698039, 1)
theme_override_fonts/font = ExtResource("2_s7lq8")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 88.0
offset_right = 360.0
offset_bottom = 388.0
theme_override_constants/separation = 20
alignment = 1

[node name="GameArea" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="BackgroundButton" type="Button" parent="VBoxContainer/GameArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_wjdds")
theme_override_styles/hover = SubResource("StyleBoxEmpty_omn00")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ofqha")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lgbhp")

[node name="Target" type="Button" parent="VBoxContainer/GameArea"]
layout_mode = 0
offset_left = -8.0
offset_top = -4.0
offset_right = 32.0
offset_bottom = 32.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_jjb28")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ghkii")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_url71")
theme_override_styles/focus = SubResource("StyleBoxEmpty_60axh")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/GameArea/Target"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -12.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5rd5v")
expand_mode = 1
stretch_mode = 5

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 75)
layout_mode = 0
offset_left = 32.0
offset_top = 432.0
offset_right = 368.0
offset_bottom = 507.0
theme_override_fonts/font = ExtResource("2_s7lq8")
text = "Iniciar"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 75)
layout_mode = 0
offset_left = 32.0
offset_top = 512.0
offset_right = 368.0
offset_bottom = 587.0
theme_override_fonts/font = ExtResource("2_s7lq8")
text = "Voltar para o menu"

[node name="GameTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="pressed" from="VBoxContainer/GameArea/BackgroundButton" to="." method="_on_background_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GameArea/Target" to="." method="_on_target_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
